# gatehouse

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  export.sh  gatehouse_Complete_Code_V500.txt  gatehouse_security_audit.md  verify_build.sh
config/: guac_connection_template.json
data/: gatehouse.env.example  gatehouse.service
db/: schema_v1.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql  schema_v5.sql  schema_v6.sql
doc/: transfer_prompt.md
include/app/: auth.h  email_sender.h  http_server.h  http_utils.h  routes.h  server_context.h
include/core/: aes_cbc.h  crypto_aead.h  hex.h  random.h  result.h  sha256.h  status.h  time.h  url.h
include/infra/: cred_fetch_token_repo.h  invite_otp_repo.h  invite_repo.h  invite_session_repo.h  kadm5_client.h  krb5_client.h  ldap_directory.h  ldif_directory.h  migrate.h  session_repo.h  sqlite_db.h  ticket_vault_read.h  ticket_vault_repo.h  xrdp_otp_repo.h
scripts/: build-deb.sh
src/: main.cc
src/app/: auth.cc  email_sender.cc  http_server.cc  http_utils.cc  routes_admin.cc  routes_auth.cc  routes_guacamole.cc  routes_invite.cc  routes_misc.cc  routes_portal.cc  server_context.cc
src/core/: aes_cbc.cc  crypto_aead.cc  hex.cc  random.cc  result.cc  sha256.cc  time.cc  url.cc
src/infra/: cred_fetch_token_repo.cc  invite_otp_repo.cc  invite_repo.cc  invite_session_repo.cc  kadm5_client.cc  krb5_client.cc  krb5_helpers.h  ldap_directory.cc  ldif_directory.cc  migrate.cc  session_repo.cc  sqlite_db.cc  ticket_vault_read.cc  ticket_vault_repo.cc  xrdp_otp_repo.cc
tests/: core_aead_test.cc  core_hex_test.cc  core_random_test.cc  core_result_test.cc  core_sha256_test.cc  core_url_test.cc
